CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
PROJECT(2022-04-13)

set(CMAKE_CXX_STANDARD 11)
if (${CMAKE_COMPILER_IS_GNUCC})
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Werror")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror")
endif()

INCLUDE_DIRECTORIES(src)

ADD_SUBDIRECTORY(src/userdb)
ADD_SUBDIRECTORY(bin)
ADD_SUBDIRECTORY(orig-tests)
ADD_SUBDIRECTORY(tests)

ADD_SUBDIRECTORY(googletest)
